<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phone_bg"
    tools:context=".home.PhoneNumberActivity">

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textStyle="bold"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="53dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/we_will_send_an_sms_with_a_verification_code_on_this_number"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="normal" />


        <EditText
            android:layout_width="match_parent"
            android:background="@null"
            android:hint="@string/_10_digit_number"
            android:textColorHint="#33FFFFFF"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_light"
            android:textStyle="bold"
            android:inputType="phone"
            android:maxLength="10"
            android:textCursorDrawable="@drawable/cursor"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:autofillHints="phone"/>
    </LinearLayout>


        <RelativeLayout
            android:id="@+id/verifyNumber"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/verify_btn_selector"
            android:layout_height="wrap_content"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/quattrocento"
                android:text="@string/verify_number"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <ImageView
                android:src="@drawable/baseline_arrow_forward_24"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />
        </RelativeLayout>

</RelativeLayout>