<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/walletcd"
    android:layout_width="match_parent"
    app:cardCornerRadius="50dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="-60dp"
    android:elevation="10dp"
    app:cardElevation="10dp"
    android:background="@android:color/transparent"
    android:visibility="visible"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/total_balance"
                android:textColor="#2D006B"
                android:gravity="center"
                android:textSize="19sp"
                android:fontFamily="@font/poppins_light"
                android:layout_marginTop="112dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/u20b9_4_246_00"
                android:textColor="@color/black"
                android:textSize="38sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/goToAddMoney"
                android:layout_width="wrap_content"
                android:text="@string/add_money"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:clickable="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:background="@drawable/bet_now_bg"
                android:foregroundGravity="center"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:drawableStartCompat="@drawable/round_add_circle_24" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/winnings"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/black"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_453_00"
                        android:textSize="12sp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/black"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/black"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_bonus"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/black"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textSize="12sp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/black"/>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
