<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.LoginActivity">

    <LinearLayout
        android:id="@+id/login_bg_image"
        android:layout_width="match_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/login_bg_text"
        android:background="@drawable/login_bg_selector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/login_heading"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/login_bg_selector"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/magra"
                android:text="@string/splash_app_name"
                android:textColor="@color/white"
                android:textSize="59sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="58dp"
                android:fontFamily="@font/taviraj_light"
                android:text="@string/lorem"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/login_btn_container"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quattrocento"
                    android:text="@string/Agree"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quattrocento"
                    android:text="@string/termsAndConditions"
                    android:layout_marginStart="4dp"
                    android:textColor="#FF4848"
                    android:textSize="13sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Login_btn"
                android:background="@drawable/verify_btn_selector"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/quattrocento"
                android:textAllCaps="false"
                android:text="@string/login"/>
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>