<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/user_image"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    app:srcCompat="@drawable/person_24"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    app:strokeWidth="3dp"
                    android:clickable="true"
                    app:strokeColor="@color/black"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    android:focusable="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/welcome_back"
                        android:textSize="11sp"
                        android:layout_marginTop="5dp"
                        android:textColor="#80212121" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/sample_name"
                        android:textColor="@color/black" />

                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/notification_icon"
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/notifications_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    app:strokeWidth="2dp"
                    android:background="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/notification_icon"
                    app:layout_constraintTop_toTopOf="@id/notification_icon"
                    app:strokeColor="@color/white"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/wallet_balance_card_bg"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/total_wallet_balance"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/u20b9_4_246_00"
                android:textColor="#92C142"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="40dp"
                android:orientation="horizontal"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#63565656"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/total_win"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        android:fontFamily="@font/poppins_light"
                        android:layout_height="wrap_content"
                        tools:ignore="SmallSp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/u20b9_4_246_00"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        android:fontFamily="@font/poppins_light"
                        android:layout_height="wrap_content"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#63565656"
                    android:paddingHorizontal="25dp"
                    android:paddingVertical="5dp"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/total_spent"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        android:fontFamily="@font/poppins_light"
                        android:layout_height="wrap_content"
                        tools:ignore="SmallSp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/u20b9_112_00"
                        android:textColor="@color/white"
                        android:textSize="9sp"
                        android:fontFamily="@font/poppins_light"
                        android:layout_height="wrap_content"
                        tools:ignore="SmallSp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_page_hz_recyclerview"
            android:layout_width="match_parent"
            android:clipToPadding="false"
            android:layout_marginHorizontal="15dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_light"
            android:text="@string/popular_on_polstreet"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="17dp"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/elections_btn"
                android:layout_width="match_parent"
                android:text="@string/elections"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_light"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="16sp"
                android:clickable="true"
                android:background="@drawable/elections_btn_bg"
                android:layout_height="wrap_content"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/events_btn"
                android:layout_width="match_parent"
                android:text="@string/events"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_light"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="16sp"
                android:clickable="true"
                android:layout_marginStart="10dp"
                android:background="@drawable/elections_btn_bg"
                android:layout_height="wrap_content"
                android:focusable="true" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_light"
            android:text="@string/participating_bets"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participating_bets_recycler_view"
            android:clipToPadding="false"
            android:layout_marginHorizontal="7dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="85dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>